--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -31,9 +31,9 @@ import workPhoto from "../images/bcit-tech-collider.webp";
         <!-- TODO:  update this later -->
         <p>Libyan, born and raised in Tripoli along the Mediterrean coast.</p>
         <p>
-          My love for video games sparked an interest in Technology.
-          Which led to my first programming foray with Arduino robots.
-          I've been coding ever since.
+          My love for video games sparked an interest in Technology. Which led
+          to my first programming foray with Arduino robots. I've been coding
+          ever since.
         </p>
       </div>
     </div>
@@ -52,7 +52,6 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           I graduated from BCIT's CST program in June 2025, where I learned the
           fundamentals of Software Development and System Design.
         </p>
-        <p>I'm searching for what's next.</p>
         <p>
           Check out my some of my <a href="#Projects">projects</a> & <a
             href="#Skills">skills</a
@@ -71,9 +70,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
         <h2>Education</h2>
         <!-- TODO:  update this later -->
         <p>
-          Fortunate to have amazing loving parents that value and prioritize
-          education. My schooling has encompassed many countries and continents.
-          From elementary in the UK and LY, to University in British Columbia.
+          I'm very fortunate to have amazing and loving parents that value and prioritize education and have provided me with the best they could.
         </p>
         <ul style="list-style:inside;">
           <li>
