fix date typo - again

--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -70,7 +70,8 @@ import workPhoto from "../images/bcit-tech-collider.webp";
         <h2>Education</h2>
         <!-- TODO:  update this later -->
         <p>
-          I'm very fortunate to have amazing and loving parents that value and prioritize education and have provided me with the best they could.
+          I'm very fortunate to have amazing and loving parents that value and
+          prioritize education and have provided me with the best they could.
         </p>
         <ul style="list-style:inside;">
           <li>
@@ -79,9 +80,9 @@ import workPhoto from "../images/bcit-tech-collider.webp";
                 href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
                 >CST</a
               ></span
-            > (2020-2022)
+            > (2023-2025)
           </li>
-          <li>University of British Columbia - BSc. (2020-2025)</li>
+          <li>University of British Columbia - BSc. (2020-2022)</li>
           <li>Shuhada al-Shat - High School (2017-2019)</li>
           <li>Kennedy-Lugar YES Exchange Program - (2017-2018)</li>
         </ul>
