--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -49,10 +49,6 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           problems that life presents.
         </p>
         <p>
-          I graduated from BCIT's CST program in June 2025, where I learned the
-          fundamentals of Software Development and System Design.
-        </p>
-        <p>
           Check out my some of my <a href="#Projects">projects</a> & <a
             href="#Skills">skills</a
           >.
@@ -71,7 +67,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
         <!-- TODO:  update this later -->
         <p>
           I'm very fortunate to have amazing and loving parents that value and
-          prioritize education and have provided me with the best they could.
+          prioritize education and gave me with the best they could.
         </p>
         <ul style="list-style:inside;">
           <li>
@@ -104,7 +100,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           hah!
         </p>
         <p>
-          I'll share my favorite in detail <a href="#Interests">below</a>, but
+          I'll share my favorite in <a href="#Interests">detail</a>, but
           here's some notable interests:
         </p>
         <ul class="hobbies-list">
