Add "Bio" heading

--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -8,14 +8,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
 
 <!-- Build out the Bio -->
 <section id="Bio">
-  <!-- <div class="center">
-    <Image
-      class:list={"bio-img"}
-      src={bioHeadshot}
-      alt={"Bio photo"}
-      aria-label={"Headshot photo for Bio section"}
-    />
-  </div> -->
+  <h1>Bio</h1>
   <div class="container flex column">
     <div class="bio-box flex">
       <div>
@@ -100,8 +93,8 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           hah!
         </p>
         <p>
-          I'll share my favorite in <a href="#Interests">detail</a>, but
-          here's some notable interests:
+          I'll share my favorite in <a href="#Interests">detail</a>, but here's
+          some notable interests:
         </p>
         <ul class="hobbies-list">
           <li class="tag">Café-hopping</li>
