--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -24,7 +24,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
         <!-- TODO:  update this later -->
         <p>Libyan, born and raised in Tripoli along the Mediterrean coast.</p>
         <p>
-          My love for video games sparked an interest in Technology. Which led
+          My love for video-games sparked an interest in Technology. Which led
           to my first programming foray with Arduino robots. I've been coding
           ever since.
         </p>
@@ -37,17 +37,14 @@ import workPhoto from "../images/bcit-tech-collider.webp";
       </div>
       <div>
         <h2>What I do</h2>
-        <p>
-          I'm a Software Developer. Which means I creatively build solutions to
-          problems that life presents.
-        </p>
+        <p>I build Software solutions to problems that life presents.</p>
         <p>
           Check out my some of my <a href="#Projects">projects</a> & <a
             href="#Skills">skills</a
           >.
         </p>
         <!-- TODO: hook this up -->
-        <button class="outline-btn">Contact Me</button>
+        <button class="outline-btn">Let's chat</button>
       </div>
     </div>
 
