Convert the Bio tags to `tag-box`

--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -93,14 +93,14 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           I'll share my favorite in <a href="#Interests">detail</a>, but here's
           some notable interests:
         </p>
-        <ul class="hobbies-list">
-          <li class="tag">Café-hopping</li>
-          <li class="tag">Aquariums</li>
-          <li class="tag">Cyberpunk Media</li>
-          <li class="tag">Guitar</li>
-          <li class="tag">Sci-fi and Fantasy Novels</li>
-          <li class="tag">Wildlife & Automotive Photography</li>
-        </ul>
+        <div class="tag-box">
+          <p class="tag">Café-hopping</p>
+          <p class="tag">Aquariums</p>
+          <p class="tag">Cyberpunk Media</p>
+          <p class="tag">Guitar</p>
+          <p class="tag">Sci-fi and Fantasy Novels</p>
+          <p class="tag">Wildlife & Automotive Photography</p>
+        </div>
       </div>
     </div>
   </div>
