--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -44,7 +44,11 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           >.
         </p>
         <!-- TODO: hook this up -->
-        <button class="outline-btn">Let's chat</button>
+        <button
+          class="outline-btn"
+          onclick="document.getElementById('Contact')?.scrollIntoView({behavior: 'smooth'});"
+          >Let's chat</button
+        >
       </div>
     </div>
 
