Update Education Bio content and add `object-fit` for `.bio-img` elements

--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -57,24 +57,18 @@ import workPhoto from "../images/bcit-tech-collider.webp";
       </div>
       <div>
         <h2>Education</h2>
-        <!-- TODO:  update this later -->
+        <p>Massive thank you to my parents for providing a great education!</p>
         <p>
-          I'm very fortunate to have amazing and loving parents that value and
-          prioritize education and gave me with the best they could.
+          British Columbia Institute of Technology - <span
+            ><a
+              href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
+              >CST</a
+            ></span
+          > (2023-2025)
         </p>
-        <ul style="list-style:inside;">
-          <li>
-            British Columbia Institute of Technology - <span
-              ><a
-                href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
-                >CST</a
-              ></span
-            > (2023-2025)
-          </li>
-          <li>University of British Columbia - BSc. (2020-2022)</li>
-          <li>Shuhada al-Shat - High School (2017-2019)</li>
-          <li>Kennedy-Lugar YES Exchange Program - (2017-2018)</li>
-        </ul>
+        <p>University of British Columbia - BSc. (2020-2022)</p>
+        <p>Shuhada al-Shat - High School (2017-2019)</p>
+        <p>Kennedy-Lugar YES Exchange Program - (2017-2018)</p>
       </div>
     </div>
 
@@ -113,6 +107,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
   .bio-img {
     height: 100%;
     width: 100%;
+    object-fit: cover;
   }
 
   .hobbies-list {
