--- a/mechanical-metal/src/components/bio.astro
+++ b/mechanical-metal/src/components/bio.astro
@@ -87,7 +87,7 @@ import workPhoto from "../images/bcit-tech-collider.webp";
           hah!
         </p>
         <p>
-          I'll share my favorite in <a href="#Interests">detail</a>, but here's
+          I'll share my favorites in <a href="#Interests">detail</a>, but here's
           some notable interests:
         </p>
         <div class="tag-box">
